## Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = PMEngined
PMEngined_SOURCES = main.c pushtest.c listener.c Helper/GoogleClientLogin.c Helper/dictionary.c Helper/iniparser.c  Helper/cJSON.c Helper/SSLHelper.c Helper/RemoteNotification.c 
PMEngined_LDADD = -lm -lssl -lcurl -lbeanstalkclient
